fix(style.css): input(disable)background & input(hover)border-color & button(hover)color

--- a/style.css
+++ b/style.css
@@ -1,1 +1,12 @@
 /* Start coding here */
+input[type="email"]:disabled {
+  background-color: lightgray;
+}
+
+input:hover {
+  border-color: khaki;
+}
+
+button:hover {
+  color: pink;
+}
